myteo/test/parser/ast/pattern/empty_named_tuple_error.myte
module test

val Tup (): int = 1